; ModuleID = '/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_init.c_engine_unlocked_finish.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_init.c_engine_unlocked_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 (%struct.TYPE_6__*)* }

@global_engine_lock = common dso_local global i32 0, align 4
@ENGINE_F_ENGINE_UNLOCKED_FINISH = common dso_local global i32 0, align 4
@ENGINE_R_FINISH_FAILED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @engine_unlocked_finish(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 1, i32* %6, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %9, -1
  store i64 %10, i64* %8, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %12 = call i32 @engine_ref_debug(%struct.TYPE_6__* %11, i32 1, i32 -1)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %44

17:                                               ; preds = %2
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 1
  %20 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %19, align 8
  %21 = icmp ne i32 (%struct.TYPE_6__*)* %20, null
  br i1 %21, label %22, label %44

22:                                               ; preds = %17
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i32, i32* @global_engine_lock, align 4
  %27 = call i32 @CRYPTO_THREAD_unlock(i32 %26)
  br label %28

28:                                               ; preds = %25, %22
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 1
  %31 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %30, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = call i32 %31(%struct.TYPE_6__* %32)
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %5, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %28
  %37 = load i32, i32* @global_engine_lock, align 4
  %38 = call i32 @CRYPTO_THREAD_write_lock(i32 %37)
  br label %39

39:                                               ; preds = %36, %28
  %40 = load i32, i32* %6, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %43, label %42

42:                                               ; preds = %39
  store i32 0, i32* %3, align 4
  br label %60

43:                                               ; preds = %39
  br label %44

44:                                               ; preds = %43, %17, %2
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = icmp slt i64 %47, 0
  %49 = zext i1 %48 to i32
  %50 = call i32 @REF_ASSERT_ISNT(i32 %49)
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %52 = call i32 @engine_free_util(%struct.TYPE_6__* %51, i32 0)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %58, label %54

54:                                               ; preds = %44
  %55 = load i32, i32* @ENGINE_F_ENGINE_UNLOCKED_FINISH, align 4
  %56 = load i32, i32* @ENGINE_R_FINISH_FAILED, align 4
  %57 = call i32 @ENGINEerr(i32 %55, i32 %56)
  store i32 0, i32* %3, align 4
  br label %60

58:                                               ; preds = %44
  %59 = load i32, i32* %6, align 4
  store i32 %59, i32* %3, align 4
  br label %60

60:                                               ; preds = %58, %54, %42
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

declare dso_local i32 @engine_ref_debug(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @CRYPTO_THREAD_unlock(i32) #1

declare dso_local i32 @CRYPTO_THREAD_write_lock(i32) #1

declare dso_local i32 @REF_ASSERT_ISNT(i32) #1

declare dso_local i32 @engine_free_util(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @ENGINEerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
